force-app/main/default/objects/ContractLineItem__c/ContractLineItem__c.object-meta.xml
<CustomObject>
    <label>Supplier Contract Line Item</label>
    <pluralLabel>Supplier Contract Line Items</pluralLabel>
    <nameField>
        <displayFormat>CI-{YYYY}{MM}{DD}-{0000}</displayFormat>
        <label>Contract Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>