force-app/main/default/objects/ContractLineItem__c/fields/ContractId__c.field-meta.xml
<CustomField>
    <fullName>ContractId__c</fullName>
    <label>Contract</label>
    <referenceTo>Contract__c</referenceTo>
    <relationshipName>ContractLineItem</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>