force-app/main/default/objects/ContractLineItem__c/fields/ContractPrice__c.field-meta.xml
<CustomField>
    <fullName>ContractPrice__c</fullName>
    <description>Contract unit price</description>
    <label>Contract Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>