force-app/main/default/objects/ContractLineItem__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <inlineHelpText>note</inlineHelpText>
    <label>Description</label>
    <length>80</length>
    <type>Text</type>
</CustomField>