force-app/main/default/objects/ContractLineItem__c/fields/ProductId__c.field-meta.xml
<CustomField>
    <fullName>ProductId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipName>ContractLineItem</relationshipName>
    <type>Lookup</type>
</CustomField>