force-app/main/default/objects/ContractLineItem__c/fields/SalesPrice__c.field-meta.xml
<CustomField>
    <fullName>SalesPrice__c</fullName>
    <description>supply price</description>
    <label>Sales Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>